# fuchitools

./: .gitignore  pyproject.toml
fuchitools/: __init__.py  datetimes.py  misc.py  pandas.py  selenium.py  sqlite.py
tests/: test_datetimes.py
