[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "utils"
version = "0.0.2"
description = "Utilidades para programacion en python."
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
include = ["utils"]
exclude = ["tests"]