[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fuchitools"
version = "0.0.2"
description = "Utilidades para programacion en python."
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
include = ["fuchitools"]
exclude = ["tests"]